fix: make banner visible

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -61,7 +61,7 @@ body {
 .site-main {
     z-index: 100;
     flex-grow: 1;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 
 /* Full width page blocks */
@@ -113,7 +113,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 80px 10px 30px 10px;
+    padding: 40px 10px 30px 10px;
     min-height: 200px;
     text-align: center;
     color: white;
@@ -2464,7 +2464,6 @@ a.cta-button {
 .under-header-content.jumbotron {
     min-height: auto;
     padding: 40px 10px 30px;
-    margin-bottom: -60px;
 }
 
 .under-header-content.jumbotron a {
